# vk-miniengine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  setup.bat  vcpkg.json
cmake/: media.cmake
src/: .gitignore  CMakeLists.txt  VkEngine.cpp  VkEngine.h  VkInitializers.cpp  VkInitializers.h  main.cpp  shaderCompiler.h  shaderComplier.cpp  utils.h
src/shaders/: pathtracer.slang  triangle.slang
